# sarinvest

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  HANDOFF.md  README.md  README_MIGRATION.md  app_shared.db-shm  docker-compose.yml  lotus_options.db-shm  lotus_options.db-wal  lotus_portfolio.db-shm  lotus_portfolio.db-wal  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/core/: config.py  exceptions.py  logging_config.py
app/db/: session.py  utils.py
app/db/models/: base.py
app/domain/: alerts.py  jalali.py  options_math.py
app/domains/commodities/: deps.py  exceptions.py  models.py  platform_service.py  platform_tasks.py  registry.py  repository.py  router.py  schemas.py  service.py  tasks.py
app/domains/commodities/clients/: base.py  digikala.py  hamrahgold.py  melligold.py  milligold.py  platform_base.py  talasea.py  technogold.py  tsetmc.py
app/domains/crypto/: aggregator.py  deps.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
app/domains/crypto/clients/: base.py  binance.py  coinbase.py  kraken.py
app/domains/market/: deps.py  models.py  repository.py  router.py  schemas.py  serializers.py  state.py  tasks.py
app/domains/portfolio/: deps.py  models.py  repository.py  router.py  schemas.py
app/domains/users/: deps.py  exceptions.py  models.py  otp_sender.py  otp_store.py  repository.py  router.py  schemas.py  security.py  service.py
app/shared/: cache.py  redis_cache.py
legacy/: README.md  fund_config.py  lotus_monitor.py
